# Rust_Microservices

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/app/constants/: index.rs
src/app/models/: file_upload.rs  filter.rs  user.rs
src/app/modules/user/: index.rs
src/app/services/: index.rs
src/middleware/: index.rs
src/routes/: index.rs
