[package]
name = "rust-microservice-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.21"
jsonwebtoken = "=7.2"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
regex = "0.2"

# File
tokio-stream = "0.1"
mime_guess = "2"
# Aws libs
aws-config = "0.6"
aws-sdk-s3 = "0.6"
# For quick exploration (xp) - use thiserror in prod and libs

anyhow = "1.0"
futures-util = { version = "0.3", default-features = false }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

